# NvidiaAIDenoiser

./: .gitignore  CMakeLists.txt  README.md  create_dist.bat  vcpkg.json
cmake/: FindOptiX.cmake  FindOptiX80.cmake
src/: CudaBuffer.h  CudaCheck.h  main.cpp
